# umoria

./: .clang-format  .gitignore  .replit  AUTHORS  CHANGELOG.md  CHANGES  CMakeLists.txt  CMakeLists.txt.emscripten  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  ChangeLog.91-94  ERRORS  Flexnames  INSTALL  Int16bit.patch  MANIFEST  MISC_NOTES  Makefile  Makefile.43  Makefile.USG  Makefile.ultrix  Makefile.win  Moria.man.alt  Moria_hours  Moria_news  OChanges  OOChanges  PKGBUILD  PROBLEMS  PRONOUNCE  README  README.md  Xenix.patch  config.h  constants.h  create.c  creature.c  death.c  desc.c  (+40 more)
amiga/: ERRORS  README  amiga.c  lmkfile  makefile  timer.c
atari_st/: ERRORS  Makefile  Makefile.bam  Makefile.roe  Makefile.tc  README  atarist.c  moria.lnk  moria.prj  porting.txt  st-stuff.c  string.h
atari_st/curscomp/: curses.c  curses.h  curses.txt  cursinc.h
data/: death_royal.txt  death_tomb.txt  help.txt  help_wizard.txt  rl_help.txt  rl_help_wizard.txt  roglcmds.hlp  splash.hlp  splash.txt  splash.txt.in  umoria.html.in  version.hlp  versions.txt  versions.txt.in
doc/: ERRORS  FEATURES.NEW  README  dragon.inf  exp.doc  faq  history  moria.6  moria.man  moria1.ms  moria1.txt  moria2.ms  moria2.txt  pronounc  spells.doc  spoilers  versions.inf  where.inf
docs/: faq.md  manual.md
files/: hours  news  origcmds.hlp  owizcmds.hlp  roglcmds.hlp  rwizcmds.hlp  scores  version.hlp  welcome.hlp
files/mac/: news  welcome.hlp
historical/: CHANGELOG  README.md  dragons.md  errors.md  errors.txt  experience.md  faq.md  features.md  history.md  manual.md  moria.md
ibmpc/: CONFIG.DOC  ERRORS  MAKE.BAT  MLINK.LNK  MORIA.CNF  Makefile  Makefile.XNX  Makefile.tc  README  TCCONFIG.TCU  TCPICK.TCU  TERMCAP  ms_ansi.c  ms_ansi.h  ms_misc.c  tcio.c  turbo_c.inf  umoria.prj
ibmpc/make/: ccthru.bat  makefile.ibm  makefile.src  makefile.top
mac/: ERRORS  Install.doc  Install.hqx  MakeFile.hqx  README  mac.c  macconf.c  macdata.c  machelp.c  macio.c  macrsrc.c  macrsrc.h  macscore.c  miscrsrc.hqx  moria.r  moria.ro  resource.hqx
mac/dumpres/: DumpRes.c  DumpRes.h  MakeFile.hqx  TestDR.c
mac/scrnmgr/: ERRORS  MakeFile.hqx  README  ScrnMgr.c  ScrnMgr.doc  ScrnMgr.doc.uu  ScrnMgr.h  ScrnMgr.r  ScrnMgr.ro  ScrnMgr1.c  ScrnMgr2.c  ScrnTest.c  ScrnTest.r  ScrnTest.ro
misc/: README  damage.chg  flock.c  funckeys.c  funckeys.h  haggle.sug  mabbrev  mail.msg  moria.msg  nomacio.c  rick.msg  shading  wex.msg
source/: config.h  constant.h  create.c  creature.c  death.c  desc.c  dungeon.c  eat.c  externs.h  files.c  generate.c  help.c  io.c  magic.c  main.c  misc1.c  misc2.c  misc3.c  misc4.c  monsters.c  moria1.c  moria2.c  moria3.c  moria4.c  player.c  potions.c  prayer.c  recall.c  rnd.c  save.c  scrolls.c  sets.c  signals.c  spells.c  staffs.c  store1.c  store2.c  tables.c  treasure.c  types.h  (+4 more)
src/: browser_curses.cpp  browser_curses.h  browser_io.cpp  browser_io.js  character.cpp  character.h  config.cpp  config.h  constant.h  create.c  create.cpp  creature.c  creature.cpp  curses.h  data_creatures.cpp  data_player.cpp  data_recall.cpp  data_store_owners.cpp  data_stores.cpp  data_tables.cpp  data_treasure.cpp  death.c  death.cpp  desc.c  desc.cpp  descriptions.cpp  descriptions.h  dice.cpp  dice.h  dungeon.c  dungeon.cpp  dungeon.h  dungeon_generate.cpp  dungeon_los.cpp  dungeon_tile.h  eat.c  eat.cpp  externs.h  files.c  files.cpp  (+122 more)
umoria/: umoria.html
unix/: Makefile  Makefile.unix  unix.c
util/: README  map.c  mcheck.inf  monster.cng  printit.c  showmon.c
util/mc/: ERRORS  Makefile  attribut.txt  creature.y  generic.h  mon.inf  st.h  symtab.c
util/mergemem/: README  moriadecode.c  moriaencode.c  moriamerge.c
util/printit/: Makefile  pr_items.c  pr_monst.c
util/scores/: Makefile  README  delete.c  print.c
util/weapons/: ERRORS  Makefile  README  calchits.c  highchar.in  lowchar.in  medchar.in  mkallwpn  mkallwpn.lst  weapon.lst
vms/: ERRORS  Makefile  README  cbreak.c  debug.mms  descrip.mms  getch.c  make.com  moria.opt  readme.vms  scores.fdl  uexit.c
